# Active-Context-Transformer

./: .gitignore  LICENSE  README.md  paper.md  pyproject.toml  requirements.txt  research_paper.md
act/: __init__.py  cli.py  models.py  parsing.py  processor.py  server.py  storage.py  utils.py
tests/: test_parsing.py  test_processor.py  test_storage.py
